# star-path-calculator-flask

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  get_equinoxes_solstices.py  get_star_trail.py  mypy.ini  pyproject.toml  requirements.txt  run.py  tox.ini
app/: __init__.py  utils.py  views.py
app/static/js/: script.js
app/templates/: index.html
cases/: anno_skyfield1.49.json  anno_skyfield1.49_docker.json  anno_skyfield1.51.json  anno_skyfield1.51_docker.json  anno_skyfield1.54_0.1.1_docker.json  cases_path_skyfield1.49_np1.json  hip_invalid.txt  seasons_skyfield1.49_docker.json
config/: __init__.py  constants.py
core/: __init__.py  coordinates.py  coordinates_old.py  data_loader.py  seasons.py  seasons_old.py  star_path.py  star_path_old.py  star_trail.py
data/: bayer-zh-corrections.csv  bayer-zh-hip.csv  bayer-zh.csv  de406.md5  greek_map.json  hip_ident.csv  hip_ident.json  hip_ident_zh.csv  hip_ident_zh.json  hip_main.md5  ident_bayer.csv  ident_bayer.pkl  ident_bayer_add.csv  ident_proper.csv  ident_proper.pkl  pinyin_overwrite.json  star-name-zh.csv  star-name-zh_sorted.csv  star_name_ident.py
docker/: Dockerfile  Dockerfile.old
scripts/: __init__.py  get_equinoxes_solstices.py  get_star_path.py  get_star_trail.py
spcalc/: __init__.py
spcalc/config/: __init__.py
spcalc/core/: __init__.py  data_loader.py  seasons.py  star_path.py
spcalc/scripts/: get_equinoxes_solstices.py  get_star_path.py
spcalc/utils/: data_utils.py  script_utils.py  star_utils.py  time_utils.py
starpathcalculator/: __init__.py
starpathcalculator/config/: __init__.py  constants.py
starpathcalculator/core/: __init__.py  data_loader.py  seasons.py  star_path.py
starpathcalculator/scripts/: get_equinoxes_solstices.py  get_star_path.py
starpathcalculator/utils/: __init__.py  data_utils.py  script_utils.py  star_utils.py  time_utils.py
templates/: index.html
tests/: conftest.py  example_cases.json  example_cases_skyfield1.49.json  example_cases_skyfield1.49_docker.json  example_cases_skyfield1.49_np1.json  example_cases_skyfield1.51.json  example_cases_skyfield1.51_docker.json  helpers.py  hip_invalid.txt  test_decimal_to_hms.py  test_equinox_solstice.py  test_hip.py  test_script_utils.py  test_seasons.py  test_star_path_annotations.py  test_star_path_svg.py  test_time_utils.py
utils/: data_utils.py  script_utils.py  star_utils.py  time_utils.py
