[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "star-path-calculator"
version = "0.1.0"
authors = [{ name = "Stardial team" }]
description = "Astronomical tool for tracing the positions of planets and stars on any chosen date in the ancient or future sky."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "great-circle-calculator==1.3.1",
    "juliandate==1.0.5",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "skyfield==1.54",
    "tzfpy[tzdata]==1.1.3",
    "tzdata==2026.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "mypy>=1.0",
    "tox>=4.0",
    "tox-uv>=1.0",
]
pinyin = [
    "opencc",
    "pypinyin",
    "pypinyin-dict",
    "python-docx",
]

[project.scripts]
get-equinoxes-solstices = "scripts.get_equinoxes_solstices:main"
get-star-path = "scripts.get_star_path:main"

[project.urls]
"Homepage" = "https://github.com/claude-hao/star-path-calculator"
"Bug Tracker" = "https://github.com/claude-hao/star-path-calculator/issues"

[tool.hatch.build.targets.wheel]
packages = ["core", "utils", "config", "scripts"]
exclude = ["data"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["core", "utils", "config", "scripts"]
