[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "star-path-calculator"
version = "0.1.1"
authors = [{ name = "Stardial" }]
description = "Astronomical tool for tracing the apparent motions of planets and stars observed from any location on any chosen date."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "great-circle-calculator==1.3.1",
    "juliandate==1.0.5",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "skyfield==1.54",
    "tzfpy[tzdata]>=1.3.1",
    "python-dotenv>=1.2.2",
    "chinesecalendar-py>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
]
pinyin = [
    "opencc",
    "pypinyin",
    "pypinyin-dict",
    "python-docx",
]

[project.scripts]
get-equinoxes-solstices = "starpathcalculator.scripts.get_equinoxes_solstices:main"
get-star-path = "starpathcalculator.scripts.get_star_path:main"

[project.urls]
"Homepage" = "https://github.com/claude-hao/star-path-calculator"
"Bug Tracker" = "https://github.com/claude-hao/star-path-calculator/issues"

[tool.hatch.build.targets.wheel]
packages = ["starpathcalculator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
