[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "star-path-calculator-flask"
version = "0.1.0"
authors = [{ name = "Stardial" }]
description = "The Flask server of star-path-calculator"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "great-circle-calculator==1.3.1",
    "juliandate==1.0.5",
    "matplotlib==3.10.8",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "skyfield==1.54",
    "tzfpy[tzdata]>=1.3.1",
    "python-dotenv>=1.2.2",
    "chinesecalendar-py>=0.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
]
pinyin = [
    "opencc",
    "pypinyin",
    "pypinyin-dict",
    "python-docx",
]

[project.scripts]
get-equinoxes-solstices = "spcalc.scripts.get_equinoxes_solstices:main"
get-star-path = "spcalc.scripts.get_star_path:main"

[project.urls]
"Homepage" = "https://github.com/lydiazly/star-path-calculator-flask"
"Bug Tracker" = "https://github.com/lydiazly/star-path-calculator-flask/issues"

[tool.hatch.build.targets.wheel]
packages = ["spcalc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
